# OpenGeo3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
GridModel/: .gitignore  CMakeLists.txt
GridModel/include/g3dgrid/: GridCollection.h  LOD.h  Lod.h  Voxel.h  VoxelCell.h  VoxelGrid.h
GridModel/src/: CMakeLists.txt  GridCollection.cpp  LOD.cpp  Lod.cpp  VoxelCell.cpp  VoxelGrid.cpp
OpenGeo3D/: .gitignore  AppFrame.cpp  AppFrame.h  BusyCursor.cpp  BusyCursor.h  CMakeLists.txt  CRSSet.cpp  CRSSet.h  ComboBoxItemDelegate.cpp  ComboBoxItemDelegate.h  Config.cpp  Config.h  DataLoaderGeoJSON.cpp  DataLoaderGeoJSON.h  DlgAbout.cpp  DlgAbout.h  DlgAbout.ui  DlgEditVoxelGrid.cpp  DlgEditVoxelGrid.h  DlgNewGridLOD.cpp  DlgNewGridLOD.h  DlgNewGridModel.cpp  DlgNewGridModel.h  DlgOpenSimpleDrillLog.cpp  DlgOpenSimpleDrillLog.h  DlgStructureModelGridding.cpp  DlgStructureModelGridding.h  DrillLogFile.cpp  DrillLogFile.h  Events.cpp  Events.h  Frame.cpp  Frame.h  G3DTreeItemData.cpp  G3DTreeItemData.h  GridLODViewListCtrl.cpp  GridLODViewListCtrl.h  GridSchemaViewListCtrl.cpp  GridSchemaViewListCtrl.h  GroupOfSimpleDrillLogFiles.cpp  (+41 more)
OpenGeo3D/QtPropertyBrowser/: qteditorfactory.cpp  qtpropertybrowser.h  qtpropertybrowserutils.cpp  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qtvariantproperty.cpp
OpenGeo3D/config/: gitVersion.h.in
data/example-1/: README.md  map_drill.xml  map_section.xml  map_stratum.xml  model_Volume_1.xml  model_Volume_2.xml  model_drill.xml  model_section.xml  project.xml
doc/: references.md  钻孔位置文件格式说明.md  钻孔测试数据文件格式说明.md
